<resources>
    <string name="app_name">atividadecoding</string>
    <string name="abrir_navegador">Abrir Navegador</string>
    <string name="fazer_liga_o">Fazer Ligação</string>
    <string name="enviar_sms">Enviar SMS</string>
    <string name="abrir_mapa">Abrir Mapa</string>
    <string name="compartilhar_texto">Compartilhar Texto</string>
    <string name="digite_o_n_mero_de_telefone">Digite o número de telefone</string>
    <string name="teste_de_tela">Teste de tela</string>
</resources>